# Personal-Website

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.history/src/: main_20210628210526.rs
css/: index.css
src/: index.rs  main.rs
src/Js/: load_animation.js
src/Pages/: about.rs  error.rs
src/css/: global.css
src/css/pages/: contact.css  index.css  load.css
src/db/: User_Data.db  email_form.db  sql_server
src/pages/: about.rs  index.rs
src/pages_rust/: about.rs  contact.rs  error.rs  index.rs  load.rs
src/templates/: footer.html.hbs  footer.html.tera  header.html.tera  layout.html.hbs  layout.html.tera
src/templates/pages/: about.html.hbs  about.html.tera  contact.html.tera  error.html.hbs  error.html.tera  index.html.hbs  index.html.tera  load.html.tera
templates/: about.hbs  error.html.hbs  footer.hbs  header.html  header.html.hbs  index.hbs  index.html.hbs  layout.hbs  layout.html  layout.html.hbs
templates/pages/: about.html.hbs  error.html.hbs
