[package]
name = "website"
version = "0.1.1"
authors = ["Abhi Rangarajan <abhirangarajan2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["tls"] }
serde = {version = "1.0.130", features = ["derive"]}
image = {version = "0.23.14"}
chrono = "0.4.19"


[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]
